--- a/GenericBackup/App.config
+++ b/GenericBackup/App.config
@@ -7,8 +7,8 @@
   <appSettings>
     <add key="source" value="C:\Publish"/>
     <add key="target" value="C:\backup"/>
-    <add key="smtp" value="10.24.0.20"/>
-    <add key="To" value="omer.haim@conduit.com"/>
+    <add key="smtp" value="[mail server]"/>
+    <add key="To" value="[email]"/>
     <add key="AllowFile" value="2"/>
     <add key="ReportSucess" value="false"/>
   </appSettings>
